[gd_scene load_steps=2 format=3 uid="uid://bi804wkxyrg7o"]

[ext_resource type="Script" uid="uid://qqrwbix7db3d" path="res://ui/root_scene.gd" id="1_mmhsm"]

[node name="RootScene" type="Node2D"]
script = ExtResource("1_mmhsm")

[node name="UI_Layer" type="CanvasLayer" parent="."]

[node name="UI_Holder" type="Control" parent="UI_Layer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
